--- a/python-application/getting_started.ini
+++ b/python-application/getting_started.ini
@@ -1,5 +1,5 @@
 [default]
-bootstrap.servers=localhost:39092,localhost:29092
+bootstrap.servers=localhost:9094
 
 [consumer]
 group.id=python_example_group_1
